--- a/HoldTimer/app.config
+++ b/HoldTimer/app.config
@@ -25,6 +25,12 @@
             <setting name="OverTimeValue" serializeAs="String">
                 <value>00:02:00</value>
             </setting>
+            <setting name="AppBackColor" serializeAs="String">
+                <value>51, 31, 67</value>
+            </setting>
+            <setting name="SelectedTheme" serializeAs="String">
+                <value>Default</value>
+            </setting>
         </HoldTimer.Properties.Settings>
     </userSettings>
 </configuration>
