--- a/HoldTimer/app.config
+++ b/HoldTimer/app.config
@@ -10,7 +10,7 @@
             <setting name="TimerBackColor" serializeAs="String">
                 <value>80, 60, 100</value>
             </setting>
-            <setting name="TimerForeColor" serializeAs="String">
+            <setting name="TimeDefaultColor" serializeAs="String">
                 <value>63, 150, 131</value>
             </setting>
             <setting name="AlertTimeColor" serializeAs="String">
@@ -19,7 +19,7 @@
             <setting name="OverTimeColor" serializeAs="String">
                 <value>Red</value>
             </setting>
-            <setting name="AltTextColor" serializeAs="String">
+            <setting name="TimerForeColor" serializeAs="String">
                 <value>Gray</value>
             </setting>
             <setting name="OverTimeValue" serializeAs="String">
