--- a/HoldTimer/app.config
+++ b/HoldTimer/app.config
@@ -31,6 +31,9 @@
             <setting name="SelectedTheme" serializeAs="String">
                 <value>Default</value>
             </setting>
+            <setting name="AlertNotificationDisplayTime" serializeAs="String">
+                <value>00:00:30</value>
+            </setting>
         </HoldTimer.Properties.Settings>
     </userSettings>
 </configuration>
