Created new AlwaysOnTop option in Settings and Settings Dialog. This implements feature enhancement / issue #4

--- a/HoldTimer/app.config
+++ b/HoldTimer/app.config
@@ -34,6 +34,9 @@
             <setting name="AlertNotificationDisplayTime" serializeAs="String">
                 <value>00:00:30</value>
             </setting>
+            <setting name="AlwaysOnTop" serializeAs="String">
+                <value>False</value>
+            </setting>
         </HoldTimer.Properties.Settings>
     </userSettings>
 </configuration>
