--- a/HoldTimer/Properties/Settings.settings
+++ b/HoldTimer/Properties/Settings.settings
@@ -29,5 +29,8 @@
     <Setting Name="AlertNotificationDisplayTime" Type="System.TimeSpan" Scope="User">
       <Value Profile="(Default)">00:00:30</Value>
     </Setting>
+    <Setting Name="AlwaysOnTop" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
