--- a/HoldTimer/app.config
+++ b/HoldTimer/app.config
@@ -37,6 +37,21 @@
             <setting name="AlwaysOnTop" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="ToolbarForeColor" serializeAs="String">
+                <value>144, 164, 174</value>
+            </setting>
+            <setting name="ToolbarBackColor" serializeAs="String">
+                <value>66, 66, 66</value>
+            </setting>
+            <setting name="ButtonBackColor" serializeAs="String">
+                <value>66, 66, 66</value>
+            </setting>
+            <setting name="ButtonHoverColor" serializeAs="String">
+                <value>55, 71, 79</value>
+            </setting>
+            <setting name="ButtonPressedColor" serializeAs="String">
+                <value>66, 66, 66</value>
+            </setting>
         </HoldTimer.Properties.Settings>
     </userSettings>
 </configuration>
