Added new AlertSoundSource (Expects a WAV file path) Updated properties names for settings in SettingsDialog. Added ability for alert to play sound, if sound assigned.

--- a/HoldTimer/app.config
+++ b/HoldTimer/app.config
@@ -52,6 +52,9 @@
             <setting name="ButtonPressedColor" serializeAs="String">
                 <value>66, 66, 66</value>
             </setting>
+            <setting name="AlertAudioSource" serializeAs="String">
+                <value />
+            </setting>
         </HoldTimer.Properties.Settings>
     </userSettings>
 </configuration>
