--- a/HoldTimer/Properties/Settings.settings
+++ b/HoldTimer/Properties/Settings.settings
@@ -47,5 +47,8 @@
     <Setting Name="ButtonPressedColor" Type="System.Drawing.Color" Scope="User">
       <Value Profile="(Default)">66, 66, 66</Value>
     </Setting>
+    <Setting Name="AlertAudioSource" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
   </Settings>
 </SettingsFile>
